[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/Menus/SettingsMenu/AudioVolumes.gd" type="Script" id=1]
[ext_resource path="res://UI/Menus/SettingsMenu/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/font_bigger.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/font_default.tres" type="DynamicFont" id=5]
[ext_resource path="res://UI/Menus/SettingsMenu/FullscreenCheckButton.gd" type="Script" id=6]
[ext_resource path="res://UI/Menus/MenuElements/FocusArrow/FocusArrow.tscn" type="PackedScene" id=7]

[sub_resource type="Theme" id=1]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.219608, 0.25098, 0.215686, 1 )

[node name="FocusArrow" parent="." instance=ExtResource( 7 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 0.55
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -350.5
margin_right = 425.0
margin_bottom = 350.5
custom_constants/separation = 45

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1042.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 4 )
text = "Settings"
align = 1

[node name="Whitespace" type="Label" parent="VBoxContainer"]
margin_top = 109.0
margin_right = 1042.0
margin_bottom = 153.0

[node name="FullscreenCheckButton" type="CheckButton" parent="VBoxContainer"]
margin_top = 198.0
margin_right = 1042.0
margin_bottom = 256.0
focus_neighbour_top = NodePath("../HBoxContainer/Return")
focus_previous = NodePath("../HBoxContainer/Return")
mouse_filter = 2
custom_fonts/font = ExtResource( 5 )
button_mask = 0
text = "Fullscreen"
flat = true
script = ExtResource( 6 )

[node name="AudioVolumes" type="GridContainer" parent="VBoxContainer"]
margin_top = 301.0
margin_right = 1042.0
margin_bottom = 541.0
theme = SubResource( 1 )
custom_constants/vseparation = 45
custom_constants/hseparation = 85
columns = 2
script = ExtResource( 1 )

[node name="MasterLabel" type="Label" parent="VBoxContainer/AudioVolumes"]
margin_top = 3.0
margin_right = 616.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
text = "Master volume"

[node name="MasterSlider" type="HSlider" parent="VBoxContainer/AudioVolumes"]
margin_left = 701.0
margin_right = 1042.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -24.0
max_value = 0.0
step = 2.0

[node name="MusicLabel" type="Label" parent="VBoxContainer/AudioVolumes"]
margin_top = 98.0
margin_right = 616.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 5 )
text = "Music volume"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/AudioVolumes"]
margin_left = 701.0
margin_top = 95.0
margin_right = 1042.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -24.0
max_value = 0.0
step = 2.0

[node name="SFXLabel" type="Label" parent="VBoxContainer/AudioVolumes"]
margin_top = 193.0
margin_right = 616.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 5 )
text = "Effects volume"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/AudioVolumes"]
margin_left = 701.0
margin_top = 190.0
margin_right = 1042.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -24.0
max_value = 0.0
step = 2.0

[node name="Whitespace2" type="Label" parent="VBoxContainer"]
margin_top = 586.0
margin_right = 1042.0
margin_bottom = 630.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 675.0
margin_right = 1042.0
margin_bottom = 725.0
alignment = 1

[node name="Return" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 383.0
margin_right = 659.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../../FullscreenCheckButton")
focus_next = NodePath("../../FullscreenCheckButton")
mouse_filter = 2
custom_fonts/font = ExtResource( 5 )
button_mask = 0
text = "Return"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_SettingsMenu_visibility_changed"]
[connection signal="focus_entered" from="VBoxContainer/FullscreenCheckButton" to="." method="_on_FullscreenCheckButton_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/FullscreenCheckButton" to="VBoxContainer/FullscreenCheckButton" method="_on_FullscreenCheckButton_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/FullscreenCheckButton" to="VBoxContainer/FullscreenCheckButton" method="_on_FullscreenCheckButton_focus_exited"]
[connection signal="toggled" from="VBoxContainer/FullscreenCheckButton" to="." method="_on_FullscreenCheckButton_toggled"]
[connection signal="focus_entered" from="VBoxContainer/AudioVolumes/MasterSlider" to="." method="_on_MasterSlider_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/AudioVolumes/MasterSlider" to="VBoxContainer/AudioVolumes" method="_on_MasterSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/AudioVolumes/MasterSlider" to="VBoxContainer/AudioVolumes" method="_on_MasterSlider_focus_exited"]
[connection signal="value_changed" from="VBoxContainer/AudioVolumes/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="focus_entered" from="VBoxContainer/AudioVolumes/MusicSlider" to="." method="_on_MusicSlider_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/AudioVolumes/MusicSlider" to="VBoxContainer/AudioVolumes" method="_on_MusicSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/AudioVolumes/MusicSlider" to="VBoxContainer/AudioVolumes" method="_on_MusicSlider_focus_exited"]
[connection signal="value_changed" from="VBoxContainer/AudioVolumes/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="focus_entered" from="VBoxContainer/AudioVolumes/SFXSlider" to="." method="_on_SFXSlider_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/AudioVolumes/SFXSlider" to="VBoxContainer/AudioVolumes" method="_on_SFXSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/AudioVolumes/SFXSlider" to="VBoxContainer/AudioVolumes" method="_on_SFXSlider_focus_exited"]
[connection signal="value_changed" from="VBoxContainer/AudioVolumes/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/Return" to="." method="_on_Return_focus_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Return" to="." method="_on_Return_pressed"]
